[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyflow-wellies"
requires-python = ">=3.10"
authors = [
    {name = "Corentin Carton de Wiart", email = "corentin.carton@ecmwf.int"},
]
maintainers = [
    {name = "Juan Pereira Colonese", email = "juan.colonese@ecmwf.int"},
]
description = "Collection of pyflow tools for ecflow suites"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Code Generators",
]
dynamic = ["version", "readme"]

dependencies = [
    "jinja2",
    "pyyaml",
    "pyflow-workflow-generator >= 3.4.1",
    "tracksuite>=0.4.1",
]

[project.urls]
    repository = "https://github.com/ecmwf/pyflow-wellies"
    documentation = "https://pyflow-wellies.readthedocs.io"
    issues = "https://github.com/ecmwf/pyflow-wellies/issues"

[project.optional-dependencies]
    test = [
        "pytest",
    ]
    docs = [
        "mkdocs",
        "mkdocs-material",
        "mkdocstrings-python",
        "mkdocs-autorefs",
        "mkdocs-gen-files",
        "pymdown-extensions",
        "markdown-exec[ansi]",
    ]

[project.scripts]
    wellies-quickstart = "wellies.quickstart:main"

# Code inspection
[tool.black]
line-length = 79

[tool.isort]
profile="black"

# Testing
[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:Pdb"
testpaths = [
    "tests",
]

# Packaging/setuptools options
[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]

[tool.setuptools_scm]
version_file = "wellies/_version.py"
version_file_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
parentdir_prefix_version='pyflow-wellies-'  # get version from GitHub-like tarballs
fallback_version='0.7'
